# ai-music-lab

./: .gitignore  README.md  index.xml
StemsSeparator/: Setup.lua  StemSeparator.lua  modal_sam_audio.py  pyproject.toml  separate_demucs.py  separate_sam.py  setup_helpers.py
StemsSeparator/lib/: gui.lua  theme.lua  widgets_extra.lua
plugins-and-extensions/Audio2Midi/: .gitignore  Audio2Midi.lua  README.md  RESEARCH.md  ai-music-lab-Audio2Midi.lua  transcribe.py
plugins-and-extensions/Audio2Midi/evaluation/: README.md  compute_f1.py  fetch_fixtures.sh  fetch_ground_truth.sh  render_mp3.sh
plugins-and-extensions/Audio2Midi/evaluation/compound/test01/: notes.txt  transcribed_cuda.mid
plugins-and-extensions/Audio2Midi/evaluation/compound/test02/: notes.txt  transcribed_cuda.mid
plugins-and-extensions/Audio2Midi/evaluation/compound/test03/: notes.txt  transcribed_cuda.mid
plugins-and-extensions/Audio2Midi/evaluation/compound/test04/: notes.txt  transcribed_cuda.mid
plugins-and-extensions/Audio2Midi/evaluation/compound/test05/: notes.txt  transcribed_cuda.mid
plugins-and-extensions/Audio2Midi/evaluation/compound_v2/test04/: drums_only.mid  notes.txt  transcribed_cuda.mid
plugins-and-extensions/Audio2Midi/evaluation/compound_v2/test05/: drums_only.mid  notes.txt  transcribed_cuda.mid  yourmt3_pitched.mid
plugins-and-extensions/Audio2Midi/evaluation/compound_v2/test07/: notes.txt  transcribed_cuda.mid
plugins-and-extensions/Audio2Midi/evaluation/compound_v2/test08/: notes.txt  transcribed_cuda.mid
plugins-and-extensions/Audio2Midi/evaluation/custom_eval/track01_half_foot_outside/: compound_v2.mid  miros.mid  notes.txt  yourmt3.mid
plugins-and-extensions/Audio2Midi/evaluation/custom_eval/track02_villa_lobos/: compound_v2.mid  miros.mid  notes.txt  yourmt3.mid
plugins-and-extensions/Audio2Midi/evaluation/custom_eval/track03_moderat/: compound_v2.mid  miros.mid  notes.txt  yourmt3.mid
plugins-and-extensions/Audio2Midi/evaluation/miros/test01/: notes.txt  transcribed_cuda.mid  transcribed_cuda_beat.mid
plugins-and-extensions/Audio2Midi/evaluation/miros/test02/: notes.txt  transcribed_cuda.mid  transcribed_cuda_beat.mid
plugins-and-extensions/Audio2Midi/evaluation/miros/test03/: notes.txt  transcribed_cuda.mid  transcribed_cuda_beat.mid
plugins-and-extensions/Audio2Midi/evaluation/miros/test04/: notes.txt  transcribed_cuda.mid  transcribed_cuda_beat.mid
plugins-and-extensions/Audio2Midi/evaluation/miros/test05/: notes.txt  transcribed_cuda.mid  transcribed_cuda_beat.mid
plugins-and-extensions/Audio2Midi/evaluation/miros/test06/: notes.txt  transcribed_cuda.mid  transcribed_cuda_beat.mid
plugins-and-extensions/Audio2Midi/evaluation/miros/test07/: notes.txt  transcribed_cuda.mid  transcribed_cuda_beat.mid
plugins-and-extensions/Audio2Midi/evaluation/miros/test08/: notes.txt  transcribed_cuda.mid  transcribed_cuda_beat.mid
plugins-and-extensions/Audio2Midi/evaluation/miros/test09/: notes.txt  transcribed_cuda.mid  (+1 more)
plugins-and-extensions/Audio2Midi/research/: eval_beat_tracking.py  pyproject.toml  research_adtof_modal.py  research_compound_pipeline_modal.py  research_compound_v2_modal.py  research_miros_modal.py  research_yourmt3_modal.py
plugins-and-extensions/Audio2Midi/research/fixtures/: README.md
plugins-and-extensions/MidiGenerator/: INTERACTIVE_LOOP.md  MidiGenerator.lua  README.md  RESEARCH.md  ai-music-lab-MidiGenerator.lua  midigen.py  prompt_adapters.py
plugins-and-extensions/MidiGenerator/evaluation/: README.md
plugins-and-extensions/MidiGenerator/evaluation/amadeus/: README.md  regenerate_all.sh
plugins-and-extensions/MidiGenerator/evaluation/chatmusician/: README.md  regenerate_all.sh
plugins-and-extensions/MidiGenerator/evaluation/midi_llm/: build_prompts.py  download_demo_references.sh  regenerate_all.sh  render_cuda_mp3.sh
plugins-and-extensions/MidiGenerator/evaluation/text2midi/: regenerate_all.sh
plugins-and-extensions/MidiGenerator/research/: .musecoco_last_call.json  out_acc.mid  out_cont.mid  out_mllm.mid  out_mllm_jazz_long.mid  out_mllm_pop.mid  out_musecoco.mid  out_musecoco_109.mid  out_musecoco_2273.mid  out_musecoco_training_prompt.mid  out_t2m.mid  out_t2m_long.mid  out_t2m_t08.mid  pyproject.toml  research_amadeus_modal.py  research_amt.py  research_amt_modal.py  research_anticipatory.py  research_anticipatory_modal.py  research_chatmusician_modal.py  research_midi_llm.py  research_midi_llm_modal.py  research_musecoco_modal.py  research_text2midi.py  research_text2midi_modal.py
plugins-and-extensions/MidiGenerator/research/fixtures/: melody.mid
plugins-and-extensions/MidiGenerator/research/tools/: midi_abc.py
plugins-and-extensions/StemsSeparator/: README.md  StemSeparator.lua  ai-music-lab-StemSeparator.lua  separate_demucs.py  separate_sam.py  test_separate_demucs.py  test_separate_sam.py
plugins-and-extensions/Text2Audio/: .gitignore  RESEARCH.md  Text2Audio.lua  ai-music-lab-Text2Audio.lua  text2audio.py
plugins-and-extensions/Text2Audio/evaluation/: README.md  compute_metrics.py  compute_metrics_edit.py  fetch_edit_sources.sh  fetch_foundation1_demos.sh  fetch_reference_set.sh  fetch_stable_audio_open_demos.sh  prompts.json  prompts_official.json  render_norm.sh
plugins-and-extensions/Text2Audio/evaluation/edit/: README.md  metrics_edit.json
plugins-and-extensions/Text2Audio/evaluation/stable_audio_open/: metrics.json
plugins-and-extensions/Text2Audio/research/: pyproject.toml  research_acestep_edit_modal.py  research_acestep_gen_modal.py  research_audiogen_modal.py  research_foundation1_modal.py  research_inspiremusic_gen_modal.py  research_inspiremusic_modal.py  research_magnet_modal.py  research_melodyflow_modal.py  research_musicgen_gen_modal.py  research_musicgen_melody_modal.py  research_mustango_modal.py  research_sao_edit_modal.py  research_stable_audio_open_modal.py  research_zeta_edit_modal.py
plugins-and-extensions/shared/: Setup.lua  ai-music-lab-Setup.lua  pyproject.toml  setup_helpers.py
plugins-and-extensions/shared/lib/: common.lua  gui.lua  widgets_extra.lua
(+325 files in other folders)
