[project]
name = "audio2midi-research"
version = "0.1.0"
description = "Sandbox aislado para evaluar modelos audio-to-MIDI antes de integrar en el plugin REAPER"
requires-python = ">=3.10"
dependencies = [
    # Modal cloud
    "modal>=0.64",
    # ML framework (CPU wheels para uv sync local sin CUDA)
    "torch>=2.2",
    "torchaudio>=2.2",
    # MIDI I/O
    "mido>=1.3",
    "pretty_midi>=0.2.10",
    # Audio
    "librosa>=0.10",
    "soundfile>=0.12",
    # YourMT3+ deps (compound pipeline también los usa)
    "einops>=0.7",
    "lightning>=2.2.1",
    "transformers>=4.44",
    "huggingface_hub>=0.24",
    # Pipeline compuesto: separación de fuentes
    "demucs>=4.0",
    # Pipeline compuesto: transcripción por stem
    "basic-pitch>=0.4",
    # Utilidades
    "psutil>=6.0",
    # Evaluación F1 objetiva (compute_f1.py)
    "mir_eval>=0.7",
    "pyyaml>=6.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
name = "pytorch-cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
