[project]
name = "midi-generator-research"
version = "0.1.0"
description = "Sandbox aislado para evaluar modelos MIDI antes de integrar en el plugin REAPER"
requires-python = ">=3.10"
dependencies = [
    # inference y modelo
    "torch>=2.1",
    "transformers>=4.38",
    "huggingface-hub>=0.21",
    "sentencepiece",            # requerido por T5Tokenizer
    # MIDI I/O
    "mido>=1.3",
    "pretty_midi>=0.2.10",
    # Anticipatory Music Transformer (Apache 2.0)
    "anticipation @ git+https://github.com/jthickstun/anticipation.git",
    # utilidades de research
    "psutil>=5.9",
]

[tool.uv.sources]
anticipation = { git = "https://github.com/jthickstun/anticipation.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
