[project]
name = "midi-generator-research"
version = "0.1.0"
description = "Sandbox aislado para evaluar modelos MIDI antes de integrar en el plugin REAPER"
requires-python = ">=3.10"
dependencies = [
    # Modal cloud
    "modal>=0.64",
    # inference y modelo
    "torch>=2.1",
    "transformers>=4.44",  # MIDI-LLM requiere >=4.44 (Llama 3.2 support)
    "huggingface-hub>=0.21",
    "sentencepiece",            # requerido por T5Tokenizer
    # MIDI I/O
    "mido>=1.3",
    "pretty_midi>=0.2.10",
    # Anticipatory Music Transformer (Apache 2.0)
    "anticipation @ git+https://github.com/jthickstun/anticipation.git",
    # Text2midi deps (clonado localmente en text2midi/)
    "jsonlines>=4.0",           # requerido por text2midi/model/transformer_model.py
    "st-moe-pytorch>=0.1.8",   # MoE layer usado por el transformer decoder
    "accelerate>=0.18",         # carga optimizada del modelo en MPS
    "spacy>=3.8",               # evaluación/métricas de text2midi
    # utilidades de research
    "psutil>=5.9",
]

[tool.uv.sources]
anticipation = { git = "https://github.com/jthickstun/anticipation.git" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
